--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -1,32 +1,17 @@
 <% provide(:title, "Search") %>
-<%# <%= javascript_include_tag "slider.js" %>  
 
 
 
 <div class="search-top-section">
   <p>検索結果<%= @events.count %>件</p>
   <div class="search-container">
-        <ul class=""> 
-    <% @events.each_with_index do |event| %>         
-           <li class="swiper-slide" alt="">
-            <div class="event-thumbnail">
-                <div class="event-thumb-image">
-                  <% if event.event_image_name.size == 0 %>
-                    <%= image_tag "/assets/catman" %>
-                  <% else %>
-                    <%= image_tag event.event_image_name.url %>
-                  <% end %>
-                </div>
-                <div class="event-thumb-text">
-                  <%= link_to "/events/#{event.id}" do %>
-                    <h3><%= event.event_title %></h2>
-                    <p><%= event.content %></p>
-                  <% end %>
-                </div>
-              </div> 
-         
-    
-    <% end %>
-        </ul>
-  <%# </div>  %>
+    <ul class=""> 
+      <% @events.where(publish: true).each_with_index do |event| %>         
+        <li class="swiper-slide" alt="">
+          <%= link_to "/events/#{event.id}" do %>
+            <%= render 'home/event_thumbnail',event: event %>
+          <% end %>
+      <% end %>
+    </ul>
+  </div> 
 </div>
