--- a/app/views/home/feel.html.erb
+++ b/app/views/home/feel.html.erb
@@ -9,7 +9,7 @@
        <%= link_to ">>",feel_page_path(f) ,style: "display:inline-block; color:black;" %>
       <div class="swiper" id="swiper<%= index %>">
         <ul class="swiper-wrapper swipes">
-          <% f.events.where(publish: true).order("RANDOM()").limit(6).each do |event| %>
+          <% f.events.where(publish: true).order("rand()").limit(6).each do |event| %>
             <li class="swiper-slide" alt="">
               <%= link_to "/events/#{event.id}",data: {"turbolinks"=>false} do %>
                 <%= render 'home/event_thumbnail',event: event %>
